--- a/style-index.css
+++ b/style-index.css
@@ -9,10 +9,6 @@
     scrollbar-color: rgb(108, 255, 174) rgba(150, 255, 255, 0.5);
 
   }
-  
-  h1{
-    color: var(--lightblue);
-  }
 
   .box p{
     font-family: "Lucida Console", "Courier New", monospace;
@@ -27,6 +23,11 @@
   }
 
   .box ul{
+    font-family: "Lucida Console", "Courier New", monospace;
+
+  }
+
+  .header h1{
     font-family: "Lucida Console", "Courier New", monospace;
 
   }
@@ -61,7 +62,7 @@
   
     .header {
       grid-row: 1 / 2;
-      grid-column: 1 / 2;
+      grid-column: 1 / 3;
     }
   
     #aboutme { 
